# IStudioBasic

./: .gitignore  CMakeLists.txt
IStudio/: CMakeLists.txt
IStudio/include/: CMakeLists.txt
IStudio/include/IStudio/: CMakeLists.txt  IStudio.hpp  IStudioDeclaration.hpp  Types.hpp
IStudio/include/IStudio/Lang/: Arithematic.hpp  ArithematicallyAddable.hpp  ArithematicallySubtractable.hpp  Boolean.hpp  CMakeLists.txt  Comparable.hpp  DefaultType.hpp  Double.hpp  EquiComparable.hpp  Equitable.hpp  GreaterThan.hpp  GreaterThanEquitable.hpp  Integer.hpp  Lang.hpp  LangDeclaration.hpp  LessThan.hpp  LessThanEquitable.hpp  NonEquitable.hpp  OutputStream.hpp
IStudio/include/IStudio/Test/: Test.hpp
IStudio/include/IStudio/Util/: Allocator.hpp  Array.hpp  CMakeLists.txt  Iterator.hpp  LinkList.hpp  SharedPtr.hpp  Util.hpp  vector.hpp
IStudio/src/: CMakeLists.txt
IStudio/src/IStudio/: CMakeLists.txt  Hello.cpp
cmake/: IStudioConfig.cmake.in
examples/: CMakeLists.txt  JSONTest.cpp
